# skopio

./: .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.cargo/: config.toml
.sqlx/: query-02f34e94e7a4706cdecfa4f17821f40812ea12129cde8fb997ccab2b06a8398e.json  query-04bbe0869095d46a32f29680c6e846932a432b4dfeddbd820fd96cee8110506a.json  query-0516406df6c13da695fcb4c3d5b476a895776e9d4b258496a96830ae8087c79d.json  query-09c2a35fb1d96631ad13839efc1a5b60109d60ebf7f72bdffc7bd1c7f0cbfae9.json  query-0ab31f31934d9c21cb98fe80889343a62e9b4c107f7c0b26f26acf63f91ba6ed.json  query-0c1ab88b94e1559d367ee81b5c8766292faaace93392c032f20c5a8d391bd9cb.json  query-0c7d33646f95eb245342934d0fc7d683c7aa6cbdc0c2008236f9f2f77c64587f.json  query-0def0fe410d7904b0c635862805ce92b30ee0869f8d3e5bd1746b2ff57499c42.json  query-11944a8c133e25fceb13af3133c20eb54059377fc7cd74dd82aa4cadda1339fa.json  query-12651f42e419ae055ec02ec7cf4ed7da03a3da24a2a7b3ece469a0e9ccb8c7bc.json  query-13a332e8472770b4cee6931f02631f7d0f125ec36df81973087be3075d24d1a2.json  query-147298b656ff4b6f11e621cfe37b8d70c49396b517a346c742639c812f0a6bf9.json  query-16dc3c6f0025e43789b3e932c24e0f08da17ac3a8256267c4d97ddd85c66499f.json  query-1c4f6dd1807d405ef2fbf73521dcb2c53c4642c764009902b7df8025494bf145.json  query-1d096af87a9b540c8c93475b2db7f67730df849c2d7b18e24c19df32f426dc5c.json  query-1f14424ec84e65a15ea8c9057f12cbaacad1cf4ff94a868af242e739dd30e81d.json  query-1f2f0013870988eb245f4157e2f3cbadb1383e25db360c39d62f761e890b2d7a.json  query-1fd77b3c84e403d8138f2bb312402531cddbfdc49e4391084308834878067574.json  query-205316476150a26a51d133cbcbf5096ed719c3ef5314194f6333a768a365c777.json  query-20af80aa300b8b26eeac42ab6274b89c63403c849c4d6d593d528998730c523a.json  query-20b5bc557475cab1dea42c96befa85b54223ebe0fb29ca71a297550ee9279b48.json  query-2384baf14cf2ffb5c7bf443a8b5b03414f84e4e824208abfcbc5195475423381.json  query-25a7ca4486b30fcbe36449dfc1b4646270170718dce5739667f8e123db422430.json  query-25b5e7becc8f50a65fdabbb4865f16970ad1b4931be503f05cf97ee8da091853.json  query-26830908363f719ead06e0968e5d1378b9c742bc9081e17cd89d3411e31fe173.json  query-27291e0353b6a86739d84ed5eba6baffe4c1eda5eb06c61c9734b1298296e8e1.json  query-27be7db4cce3b4a7f63593bace6485766f0675b7325cb981a3cc0154514973b7.json  query-285db8483ff9525e48841bdef46654134213acd473644689c0ce74a9940e412d.json  query-29c79159f2e9e9fafffd66547cc80ea1de4ee0c5db57d1368ccb010b97c47b4f.json  (+141 more)
apps/cli/: CHANGELOG.md  Cargo.toml  README.md
apps/cli/migrations/: V1__init.sql
apps/cli/src/: cli.rs  commands.rs  config.rs  db.rs  error.rs  event.rs  events.rs  heartbeat.rs  main.rs  models.rs  sync.rs  tracking.rs  utils.rs
apps/cli/src/handlers/: event.rs  heartbeat.rs  mod.rs  sync.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: afk_tracker.rs  buffered_service.rs  cursor_tracker.rs  event_tracker.rs  goals_service.rs  heartbeat_tracker.rs  keyboard_tracker.rs  lib.rs  main.rs  monitored_app.rs  notification.rs  server.rs  summaries.rs  sync_service.rs  tracking_service.rs  window_tracker.rs
apps/desktop/src-tauri/src/helpers/: app.rs  config.rs  db.rs  git.rs  language.rs  mod.rs  time.rs
apps/desktop/src-tauri/src/network/: afk_events.rs  data.rs  events.rs  insights.rs  mod.rs  summaries.rs  tables.rs  utils.rs
apps/desktop/src-tauri/src/trackers/: afk_tracker.rs  cursor_tracker.rs  event_tracker.rs  heartbeat_tracker.rs  keyboard_tracker.rs  mod.rs  mouse_tracker.rs  window_tracker.rs
apps/desktop/src-tauri/src/trackers/ax/: cache.rs  ffi.rs  provider.rs  types.rs  util.rs
apps/desktop/src-tauri/src/ui/: menu.rs  mod.rs  notification.rs  toolbar.rs  tray.rs  window.rs
apps/desktop/src-tauri/src/utils/: app.rs  config.rs  mod.rs  permissions.rs  time.rs  tracing.rs
apps/desktop/src-tauri/src/utils/ax/: cache.rs  ffi.rs  mod.rs  provider.rs  types.rs  util.rs
apps/desktop/src-tauri/tests/: ax_snapshot_cache_tests.rs
apps/server/: CHANGELOG.md  Cargo.toml  README.md
apps/server/src/: app.rs  auth.rs  error.rs  main.rs  models.rs  net.rs  routes.rs  utils.rs
apps/server/src/handlers/: health.rs  heartbeat.rs  mod.rs
apps/server/src/routes/: afk_events.rs  apps.rs  categories.rs  events.rs  health.rs  heartbeats.rs  insights.rs  mod.rs  projects.rs  summary.rs
crates/common/: Cargo.toml
crates/common/src/: client.rs  error.rs  git.rs  keyring.rs  language.rs  lib.rs  time.rs
crates/common/src/models/: inputs.rs  mod.rs  outputs.rs
crates/common/src/time/: insight.rs  mod.rs
crates/db/: Cargo.toml
crates/db/.sqlx/: query-d5d87d00e950e5ae1c44e8ba069081e767ae58916ca7d7b6e8ece7f3d09402c9.json  query-ec717ed329cfb70b6204ad1d9bbebfc2b93ef51e03079e6d851b2187b4bc9b8f.json
crates/db/migrations/: 20250212192850_initial_schema.sql
crates/db/migrations/desktop/: 20250416111649_initial_desktop_schema.sql
crates/db/migrations/server/: 20250416111829_initial_server_schema.sql  20250917113411_add_timestamp_indexes.sql  20250922194927_remove_without_rowid.sql  20251129204954_add_composite_indexes.sql  20260206224246_migrate_afk_events_to_unix_timestamps.sql
crates/db/src/: afk_events.rs  apps.rs  branches.rs  connection.rs  db_context.rs  entities.rs  error.rs  events.rs  goals.rs  heartbeats.rs  languages.rs  lib.rs  models.rs  projects.rs  tags.rs  utils.rs  yearly_summaries.rs
crates/db/src/desktop/: afk_events.rs  events.rs  goal_notifications.rs  goals.rs  heartbeats.rs  mod.rs
crates/db/src/migrations/: create_tables.sql
crates/db/src/server/: afk_events.rs  apps.rs  branches.rs  categories.rs  entities.rs  events.rs  goals.rs  heartbeats.rs  insights.rs  languages.rs  mod.rs  projects.rs  source.rs  summary.rs  tags.rs  yearly_summaries.rs
crates/db/src/server/projects/: cursor.rs  mod.rs
crates/db/src/server/utils/: mod.rs  query.rs  range.rs  summary_filter.rs
crates/db/tests/: helpers.rs  overlap_total.rs
(+182 files in other folders)
