[workspace]
members = [
    "apps/cli",
    "apps/desktop/src-tauri",
    "apps/server",
    "crates/*"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Samuel Wahome <hey@samwahome.com>"]
repository = "https://github.com/Samuel-dot-cloud/skopio"
rust-version = "1.80.0"

[workspace.dependencies]
chrono = "0.4.40"
serde = "1.0.218"
tokio = "1.43.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dirs = "6.0.0"
serde_json = "1.0.140"
log = "0.4.26"
git2 = "0.20.0"
reqwest = "0.12.15"
env_logger = "0.11.6"
anyhow = "1.0.97"
percent-encoding = "2.3.1"
sqlx = "0.8.5"
async-trait = "0.1.88"
thiserror = "2.0.12"
serde_qs = "0.15.0"
tokei = "12.1.2"
tempfile = "3.20.0"
keyring = "3.6.3"
uuid = "1.18.0"

specta = "2.0.0-rc.22"
tauri-specta = "2.0.0-rc.21"
specta-typescript = "0.0.9"


[profile.dev.package.sqlx-macros]
opt-level = 3

# [profile.dev]
# debug = 2
# opt-level = 1
# codegen-units = 1
# incremental = false
# lto = false
# split-debuginfo = "unpacked"
# strip = "none"
