[workspace]
members = ["apps/cli", "apps/desktop/src-tauri", "apps/server", "crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Samuel Wahome <hey@samwahome.com>"]
repository = "https://github.com/Skopio-app/skopio"
rust-version = "1.88.0"

[workspace.dependencies]
chrono = "0.4.44"
serde = "1.0.228"
tokio = "1.49.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
dirs = "6.0.0"
serde_json = "1.0.149"
log = "0.4.29"
git2 = "0.20.4"
reqwest = "0.13.2"
env_logger = "0.11.9"
anyhow = "1.0.102"
percent-encoding = "2.3.2"
sqlx = "0.8.6"
libsqlite3-sys = "0.30.1"   # Update blocked by rusqlite
rusqlite = "0.32.0"     # Update blocked by sqlx
async-trait = "0.1.89"
thiserror = "2.0.18"
serde_qs = "1.0.0"
tokei = "14.0.0"
tempfile = "3.26.0"
keyring = "3.6.3"
uuid = "1.21.0"
futures-util = "0.3.32"
sha2 = "0.10.9"
bytes = "1.11.1"

specta = "2.0.0-rc.22"
tauri-specta = "2.0.0-rc.21"
specta-typescript = "0.0.9"


[profile.dev.package.sqlx-macros]
opt-level = 3

# [profile.dev]
# debug = 2
# opt-level = 1
# codegen-units = 1
# incremental = false
# lto = false
# split-debuginfo = "unpacked"
# strip = "none"

# https://doc.rust-lang.org/rustc/codegen-options/index.html
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "unwind"
strip = true
