[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
clap = { version = "4.5.29", features = ["derive"] }
reqwest = { workspace = true, features = ["blocking", "json"] }
rusqlite = { version = "0.32.0", features = ["bundled-sqlcipher-vendored-openssl"] } # Update blocked by sqlx
serde = { workspace = true, features = ["derive"] }
dirs = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
common = { path = "../../crates/common" }
refinery = { version = "0.8.16", features = ["rusqlite"]}
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"]}

[dev-dependencies]
tempfile = { workspace = true }


