[package]
name = "skopio-cli"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
rusqlite = { workspace = true, features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { workspace = true, features = ["derive"] }
dirs = { workspace = true }
serde_json = { workspace = true }
common = { path = "../../crates/common" }
refinery = { version = "0.9.0", features = ["rusqlite"]}
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"]}
tokio = { workspace = true, features = ["rt-multi-thread", "macros"]}
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tempfile = { workspace = true }

