[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { version = "0.8.1" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "chrono"] }

db = { path = "../../crates/db", features = ["server"] }
chrono = { workspace = true, features = ["serde"] }
dirs = { workspace = true }
tower-http = { version = "0.6.2", features = ["cors"] }
common = { path = "../../crates/common" }
specta = { workspace = true }
types = { path = "../../crates/types" }
serde_qs = { workspace = true, features = ["axum"]}
