[package]
name = "skopio-server"
version = "0.1.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = { version = "0.8.1" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "chrono"] }
tracing-appender.workspace = true

db = { path = "../../crates/db", features = ["server"] }
chrono = { workspace = true, features = ["serde"] }
dirs = { workspace = true }
tower-http = { version = "0.6.2", features = ["cors"] }
common = { path = "../../crates/common" }
specta = { workspace = true }
serde_qs = { workspace = true, features = ["axum"] }
uuid = { workspace = true, features = ["v7", "fast-rng", "v5", "serde"] }
anyhow.workspace = true
thiserror.workspace = true
