[package]
name = "common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
specta = { workspace = true , features = ["chrono", "derive", "uuid"] }
thiserror = { workspace = true }
git2 = { workspace = true }
tokei = { workspace = true }
percent-encoding = { workspace = true }
keyring = { workspace = true, features = ["apple-native"]}
uuid = {workspace = true, features = ["v7", "v4", "serde"]}
dirs.workspace = true
anyhow.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
tokio = { workspace = true, features = ["net"]}
