[package]
name = "db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
