[package]
name = "db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
desktop = []
server = []

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = [ "sqlite", "runtime-tokio", "tls-native-tls", "chrono", "macros", "migrate", "derive" ] }
log = { workspace = true }
specta = {workspace = true }
common = { path = "../common"}
thiserror = { workspace = true }
types = { path = "../types" }
