[package]
name = "Skopio"
version = "0.1.0"
description = "A Tauri App"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
tauri = { version = "2.1.0", features = [ "protocol-asset", "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-log = "2.0.0-rc"
chrono = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full", "tracing"] }
strum_macros = "0.27.1"
strum = "0.27.1"
dashmap = "6.1.0"
anyhow = { workspace = true }
percent-encoding = { workspace = true }
async-trait = { workspace = true }
url = "2.5.4"
console-subscriber = "0.4.1"
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
tauri-plugin-dialog = "2.0.0"

specta = { workspace = true, features = ["chrono"] }
specta-typescript = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }
serde_qs = { workspace = true }
ril = { version = "0.10.3", features = ["png"] }

db = { path = "../../../crates/db", features = ["desktop"] }
common = { path = "../../../crates/common" }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.0"
objc2 = "0.6.0"
core-graphics = "0.24.0"
objc2-foundation = { version = "0.3.1", features = [
    "NSGeometry",
    "objc2-core-foundation",
] }
objc2-app-kit = "0.3.1"
